<resources>
    <string name="app_name">Syncthing-Lite</string>
    <string name="folder_list_empty_message">No folder available</string>
    <string name="clear_local_cache_index_label">Clear local cache/index</string>
    <string name="devices_list_view_empty_message">No devices available</string>
    <string name="invalid_device_id">Error: Invalid device ID</string>
    <string name="dialog_downloading_file">Downloading file %1$s</string>
    <string name="toast_file_download_failed">Failed to download file</string>
    <string name="toast_open_file_failed">No compatible app found</string>
    <string name="toast_file_upload_failed">File upload failed</string>
    <string name="toast_file_delete_failed">File delete failed</string>
    <string name="toast_upload_complete">File upload complete</string>
    <string name="toast_delete_complete">File delete complete</string>
    <string name="dialog_uploading_file">Uploading file %1$s</string>
    <string name="dialog_deleting_file">Deleting remote file</string>
    <string name="clear_cache_and_index_title">Clear local cache and index?</string>
    <string name="clear_cache_and_index_body">Clear all local cache data and index data?</string>
    <string name="loading_config_starting_syncthing_client">Loading config, starting syncthing client…</string>
    <string name="last_modified_time">Last modified: %1$s</string>
    <string name="remove_device_title">Remove device %1$s\?</string>
    <string name="remove_device_message">Remove %1$s from the list of known devices?</string>
    <string name="device_import_success">Successfully imported device %1$s</string>
    <string name="device_already_known">Device already present %1$s</string>
    <string name="folders_label">Folders</string>
    <string name="devices_label">Devices</string>
    <string name="folder_label_format">%1$s (%2$s)</string>
    <string name="file_info">%1$s, last modified %2$s</string>
    <string name="show_device_id">Show device ID</string>
    <string name="device_id">Device ID</string>
    <string name="device_id_copied">Device ID copied to clipboard</string>
    <string name="share_device_id_chooser">Share device ID with</string>
    <string name="other_syncthing_instance_title">Another Syncthing instance is running</string>
    <string name="other_syncthing_instance_message">Local discovery will not work. Stop the other Syncthing instance to enable local discovery.</string>
    <string name="intro_page_one_title">Welcome to Syncthing-Lite</string>
    <string name="intro_page_one_description">Syncthing is an open-source file synchronization application. To browse files of other devices, their owner needs to add your unique device ID to their device list first. Afterwards they need to share folders which should be browsable from this app.
\n
\nSafety warning: Please always ensure that you have backed up your data by other means and that this backup is up to date before using this app. The app is still in early development. We assume no liability for data corruption or loss, although we make every effort to deliver quality.</string>
    <string name="intro_page_two_title">Add a device</string>
    <string name="intro_page_three_title">Share your folders</string>
    <string name="intro_page_two_description">Enter a Syncthing device ID, or scan a device ID from a QR code</string>
    <string name="intro_page_three_description">Device found. Now ask the device owner to accept our connection from %1$s and share a folder with us. We\'ll continue automatically after that happened. Please wait.</string>
    <string name="intro_page_three_searching_device">Trying to find the other device. We\'ll continue automatically once the discovery is complete. Please wait.</string>
    <string name="settings">Settings</string>
    <string name="settings_app_version_title">App version</string>
    <string name="settings_local_device_name">Local device name</string>
    <string name="settings_local_device_summary">The name that other devices will see for this device</string>
    <string name="settings_force_stop">Force stop this App</string>
    <string name="settings_last_error_title">Last error</string>
    <string name="settings_last_error_summary">View the details of the last error</string>
    <string name="settings_report_bug_title">Report a bug</string>
    <string name="settings_report_bug_summary">Open the issues for this App at GitHub</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to the clipboard</string>
    <string name="device_id_dialog_title">Enter Device ID</string>
    <string name="dialog_warning_reconnect_problem">
        Due to the behaviour of this App and the behaviour of the Syncthing Server,
        you can\'t reconnect for some minutes if the App was killed (due to removing from the recent App list)
        or the connection was interrupted.
        This does not apply to local discovery connections.
    </string>
    <string name="dialog_file_save_as">Save as</string>
    <string name="dialog_file_delete">Delete</string>
    <string name="device_status_connecting">Connecting to %s</string>
    <string name="device_status_connected">Connected to %s</string>
    <string name="device_status_no_address">No known address for the device</string>
    <string name="dialog_enable_folder_sync_for_new_device_title">Enable folder sync for new device</string>
    <string name="dialog_enable_folder_sync_for_new_device_text">Do you want to sync %1$s with %2$s (%3$s)?</string>
    <string name="dialog_enable_folder_sync_for_new_device_positive">Sync</string>
    <string name="dialog_enable_folder_sync_for_new_device_negative">Do not sync</string>
    <string name="dialog_folder_info_device_list">Share folder with:</string>
    <string name="dialog_folder_info_device_list_item">%1$s (%2$s)</string>
    <string name="toast_error">Something went wrong in Syncthing-Lite. You can view the details from the settings of Syncthing-Lite.</string>
    <string name="folder_browser_home">Home</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_file">Upload file</string>
    <string name="add_device">Add device</string>
    <string name="qr_code_description">QR Code</string>
    <string name="device_icon">Device icon</string>
    <string name="file_icon">File icon</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="device_id_placeholder">XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX</string>
    <string name="zxing_msg_default_status">Place a QR code inside the viewfinder rectangle to scan it.</string>

    <!-- Generic texts used everywhere -->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>

    <!-- DevicesFragment -->
    <string name="delete_device_menu_item">Delete</string>
    <string name="edit_device_addresses_hint">Addresses</string>
    <string name="edit_device_menu_item">Edit</string>
    <string name="edit_device_dialog_title">Edit Device</string>
    <string name="edit_device_dialog_summary">Enter addresses separated by commas, e.g.: dynamic, tcp4://192.168.1.10:22000, relay://192.168.1.11:22067</string>

    <!-- Menu item linking privacy policy -->
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_summary">Open Syncthing-Lite\'s privacy policy, which covers usage (if any) of personal data.</string>
    <string name="privacy_policy_url" translatable="false">https://github.com/Catfriend1/syncthing-lite/blob/main/privacy-policy.md</string>

    <!-- Title of the preference showing the Open Source Licenses -->
    <string name="open_source_licenses_title">Open Source Licenses</string>
    
    <!-- Summary of the preference showing the Open Source Licenses -->
    <string name="open_source_licenses_summary">Show the open source licenses used</string>
</resources>
