<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:gravity="center_horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="24sp"
            android:text="@string/intro_page_one_title"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/appIntroBottomBarHeight"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/intro_page_one_description"
            android:drawablePadding="24dp"
            android:gravity="center"
            app:drawableTopCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/listening_port_taken_title"
        android:visibility="gone"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/other_syncthing_instance_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/listening_port_taken_message"
        android:layout_marginBottom="48dp"
        android:visibility="gone"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/other_syncthing_instance_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
