<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/folder_list_empty_message"
            android:textSize="20sp"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/listening_port_taken_warning"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="?colorPrimary"
        android:visibility="gone"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/other_syncthing_instance_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/other_syncthing_instance_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
